added animation analyser

--- a/FinalYearProjectDemo/FinalYearProjectDemo.csproj
+++ b/FinalYearProjectDemo/FinalYearProjectDemo.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Assets\assets\script\game\ActionRaycasting.cs" />
     <Compile Include="Assets\assets\script\game\ActionRotate.cs" />
     <Compile Include="Assets\assets\script\game\AnimatedProjector.cs" />
+    <Compile Include="Assets\assets\script\game\AnimationAnalyser.cs" />
     <Compile Include="Assets\assets\script\game\DrawWayPoint.cs" />
     <Compile Include="Assets\assets\script\game\GameMap.cs" />
     <Compile Include="Assets\assets\script\game\GameWorld.cs" />
@@ -113,7 +114,6 @@
     <Compile Include="Assets\assets\script\game\PathNode.cs" />
     <Compile Include="Assets\assets\script\game\PathNodeGenerator.cs" />
     <Compile Include="Assets\assets\script\game\Player.cs" />
-    <Compile Include="Assets\assets\script\game\PlayerController.cs" />
     <Compile Include="Assets\assets\script\leap_motion\GameDictionary.cs" />
     <Compile Include="Assets\assets\script\leap_motion\GestureTracker.cs" />
     <Compile Include="Assets\assets\script\leap_motion\HandStateTracker.cs" />
